package com.xinqihd.sns.gameserver.proto;

option java_outer_classname = "XinqiBseCaishenPray"; 
/**
 * 玩家进行祈福操作的结果
 * 因为每次祈福后，价格会发生变化，所以在这里更新新的价格信息
 * 
 */
message BseCaishenPray {
    /**
    * 表示祈福是否成功
    */
    optional bool success = 1;
    /**
    * 服务器给出的消息，如果不为空可以用sysmessage显示
    */
    optional string response = 2;
    /**
    * 今天剩余可以使用的次数
    */
    optional uint32 count = 3;
    /**
    * 购买一次的元宝价格
    */
    optional uint32 price = 4;
    /**
    * 购买后获得的金币数量 
    */
    optional uint32 goldenvalue = 5;
    /**
    * 作为注释显示，比如对于体力值来讲，显示
    *  “(VIP用户可获得更多机会)”
    */
    optional string info = 6;
}
